# ad-rss-lib

./: .gitignore  .gitmodules  index.html  sitemap.xml
ad_rss/: CMakeLists.txt  Doxyfile  package.xml
ad_rss/Appendix-ParameterDiscussion/: index.html
ad_rss/HLD-ArchitectureOverview/: index.html
ad_rss/HLD-KeyDesignDecisionsAndAlternatives/: index.html
ad_rss/HLD-Safety/: index.html
ad_rss/HLD-Security/: index.html
ad_rss/Overview/: index.html
ad_rss/SupportedRssFeatures/: index.html
ad_rss/UnstructuredConstellations/: index.html
ad_rss/ad_rss_python/: index.html
ad_rss/include/ad/rss/core/: RssCheck.hpp  RssResponseResolving.hpp  RssSituationChecking.hpp  RssSituationExtraction.hpp
ad_rss/src/core/: RssCheck.cpp  RssResponseResolving.cpp  RssSituationChecking.cpp  RssSituationExtraction.cpp
ad_rss/src/helpers/: RssLogMessage.cpp  RssLogger.cpp
ad_rss/src/logging/: ExtendedSituationData.cpp
ad_rss/src/situation/: Physics.cpp  RssFormulas.cpp  RssStructuredSceneIntersectionChecker.cpp  RssStructuredSceneIntersectionChecker.hpp  RssStructuredSceneNonIntersectionChecker.cpp  RssStructuredSceneNonIntersectionChecker.hpp  RssUnstructuredSceneChecker.cpp  RssUnstructuredSceneChecker.hpp
ad_rss/src/unstructured/: TrajectoryPedestrian.cpp  TrajectoryPedestrian.hpp  TrajectoryVehicle.cpp  TrajectoryVehicle.hpp
ad_rss/src/world/: RssObjectPositionExtractor.cpp  RssSituationCoordinateSystemConversion.cpp
ad_rss/tests/core/: RssSituationExtractionRelativePositionTests.cpp
ad_rss/tests/situation/: RssFormulaTestsInputRangeChecks.cpp
(+342 files in other folders)
